# melanoma_detection

./: README.md  avg.py  fine_tune.py  img_utils.py  main.py  melanoma_detector.ipynb  preprocess_dataset.py  pyproject.toml  requirements.txt  training.py  training_res.py  validate.py  validate_res.py
melanoma_detection/: early_stopping.py  img_utils.py  metrics_utils.py  network.py  params.py  preprocess_dataset.py  regularization.py  transforms.py
melanoma_detection/models/: __init__.py  base.py  melanoma.py  resnet.py
melanoma_detection/utils/: img_utils.py  metrics_utils.py  normalization_values.py
