[tool.poetry]
name = "melanoma-detection"
version = "0.1.0"
description = "A Neural Network which tries to identify melanoma skin cancer"
authors = ["Pedro Soares <pmbs.123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
